// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance should render 1`] = `
<div>
  <p
    class="balanceLine"
  >
    Total Balance: 
    <span
      class="amount"
    >
      1.2340
       
      <span
        aria-label="KILT Coin"
        class="coin"
      />
    </span>
  </p>
</div>
`;

exports[`Balance should show balance breakdown with update balance button 1`] = `
<div>
  <p
    class="balanceLine"
  >
    Total Balance: 
    <span
      class="amount"
    >
      1.2340
       
      <span
        aria-label="KILT Coin"
        class="coin"
      />
    </span>
    <button
      aria-label="Hide balance breakdown"
      class="hideBreakdown"
      title="Hide balance breakdown"
      type="button"
    />
  </p>
  <ul
    class="breakdown"
  >
    <li
      class="balance"
    >
      Transferable Balance: 
      <span
        class="amount"
      >
        1.2160
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
    </li>
    <li
      class="balance"
    >
      Locked Balance: 
      <span
        class="amount"
      >
        0.0100
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
    </li>
    <li
      class="balance"
    >
      Bonded Balance: 
      <span
        class="amount"
      >
        0.0080
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
    </li>
  </ul>
  <a
    aria-disabled="true"
    aria-label="Identity has no unlocked funds for update"
    class="update"
    href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/vest/sign"
    title="Identity has no unlocked funds for update"
  >
    Update Balance
  </a>
</div>
`;
